// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Button {...} /> Should be able to render default state 1`] = `
<div>
  <div
    class="p-1 h-auto"
  >
    <button
      class="rounded w-full px-4 py-2 text-center text-sm transition-all duration-300 hover:shadow-md cursor-pointer disabled:cursor-not-allowed bg-white hover:bg-gray-50 border text-black"
    >
       
      click me
    </button>
  </div>
</div>
`;

exports[`Component: <Button {...} /> Should be able to render the blue state 1`] = `
<div>
  <div
    class="p-1 h-auto"
  >
    <button
      class="rounded w-full px-4 py-2 text-center text-sm transition-all duration-300 hover:shadow-md cursor-pointer disabled:cursor-not-allowed bg-shades-100 text-white hover:bg-shades-200"
    >
       
      click me
    </button>
  </div>
</div>
`;

exports[`Component: <Button {...} /> Should be able to render the red state 1`] = `
<div>
  <div
    class="p-1 h-auto"
  >
    <button
      class="rounded w-full px-4 py-2 text-center text-sm transition-all duration-300 hover:shadow-md cursor-pointer disabled:cursor-not-allowed bg-red-600 text-white hover:bg-red-700"
    >
       
      click me
    </button>
  </div>
</div>
`;

exports[`Component: <Button {...} /> Should be able to render the white state 1`] = `
<div>
  <div
    class="p-1 h-auto"
  >
    <button
      class="rounded w-full px-4 py-2 text-center text-sm transition-all duration-300 hover:shadow-md cursor-pointer disabled:cursor-not-allowed bg-white border border-red-600 text-red-500"
    >
       
      click me
    </button>
  </div>
</div>
`;
